# rules_postgres

./: .bazelrc  .gitignore  CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  defs.md  extensions.md  update.sh
examples/parse_smoke/: BUILD.bazel  run_inverted.sh
examples/parse_smoke/testdata/: bad_sql.sql  create_function.sql
lean/: BUILD.bazel  pg_ast_smoke.bzl
lean/Pg/: Ast.lean  Catalog.lean  Ir.lean  Pretty.lean  RegexAst.lean  RegexAstMatch.lean  RegexAstMatchSemantics.lean  Smoke.lean  Stmt.lean  Ty.lean
lean/Pg/Catalog/: AttributeRef.lean  Dat.lean  Fold.lean  FoldPipelineTest.lean  Generated.lean  Oid.lean  RegTypes.lean  Resolution.lean  Snapshot.lean  SnapshotEmit.lean  SnapshotEmitTest.lean  Tables.lean
lean/Pg/Ir/: Cmp.lean  Cmp.olean  Datum.lean  Datum.olean  Types.lean  Types.olean
lean/Pg/Plpgsql/: RoundTrip.lean
lean/Pg/Query/: Top.lean
lean/Polyglot/: SqlSmoke.lean
postgres/: BUILD.bazel  defs.bzl  extensions.bzl  sql_toolchain.bzl
postgres/private/: BUILD.bazel  known_versions.bzl
postgres/private/overlay/: pg_config.h  pg_config_ext.h  pg_config_os.h
rust/libpq_buf/: BUILD.bazel  Cargo.toml
rust/libpq_buf/canonicals/: pqCheckInBufferSpace.rs  pqCheckOutBufferSpace.rs
rust/libpq_buf/src/: lib.rs  lib_ir.rs
rust/libpq_buf/tests/: buffer_grow.rs
rust/libpq_buf/translation/: end_to_end_test.sh  in_from_out.overrides.toml
rust/pg_bytea/: Cargo.toml  build.rs
rust/pg_bytea/c_oracle/: bytea.c  bytea_emit.c  renamed_bytea.c
rust/pg_bytea/src/: lib.rs
rust/pg_cash_arith/: Cargo.toml  build.rs
rust/pg_cash_arith/c_oracle/: cash_arith_emit.c  wrappers.c
rust/pg_cash_arith/src/: lib.rs
rust/pg_cash_arith/tests/: diff_cash_arith.rs
rust/pg_date_arith/: Cargo.toml  build.rs
rust/pg_date_arith/c_oracle/: date_arith.c  date_arith_emit.c  renamed_date_arith.c
rust/pg_date_arith/src/: lib.rs
rust/pg_fcinfo/: Cargo.toml  build.rs
rust/pg_fcinfo/c_oracle/: abi_probe.c
rust/pg_fcinfo/src/: lib.rs
rust/pg_fcinfo/tests/: fixture.c  round_trip.rs
rust/pg_finfo_v1/: Cargo.toml  build.rs  manifest.json
rust/pg_finfo_v1/src/: lib.rs
rust/pg_finfo_v1/tests/: contract.rs
rust/pg_float_to_int/: Cargo.toml  build.rs
rust/pg_float_to_int/c_oracle/: c_oracle_ereport.h  float_to_int.c  float_to_int_emit.c  renamed_float_to_int.c  wrappers.c
rust/pg_float_to_int/src/: lib.rs
rust/pg_int4_arith/: BUILD.bazel  Cargo.toml  build.rs
rust/pg_int4_arith/c_oracle/: int4_arith.c  int4_arith_emit.c  renamed_int4_arith.c
rust/pg_int4_arith/src/: lib.rs
rust/pg_int4_arith/tests/: diff_int4_arith.rs
rust/pg_int4_bitwise/: Cargo.toml  build.rs
rust/pg_int4_bitwise/c_oracle/: int4_bitwise_emit.c  renamed_int4_bitwise.c
rust/pg_int4_bitwise/src/: lib.rs
rust/pg_int4_bitwise/tests/: diff_int4_bitwise.rs
rust/pg_int4_cmp/: Cargo.toml  build.rs
rust/pg_int4_cmp/c_oracle/: int4_cmp.c  int4_cmp_emit.c  renamed_int4_cmp.c  wrappers.c
rust/pg_int4_cmp/src/: lib.rs
rust/pg_int4_cmp/tests/: diff_int4_cmp.proptest-regressions  diff_int4_cmp.rs
rust/pg_int4_div/: Cargo.toml  build.rs
rust/pg_int4_div/c_oracle/: int_div.c  int_div_emit.c  wrappers.c
rust/pg_int4_div/src/: lib.rs
rust/pg_int4_div/tests/: diff_int_div.proptest-regressions
rust/pg_int4_hash/: Cargo.toml  build.rs
rust/pg_int4_hash/c_oracle/: int4_hash_emit.c  renamed_int4_hash.c  wrappers.c
rust/pg_int4_hash/src/: lib.rs
rust/pg_int4_unary/: Cargo.toml  build.rs
rust/pg_int4_unary/c_oracle/: int4_unary_emit.c  renamed_int4_unary.c  wrappers.c
rust/pg_int4_unary/src/: lib.rs
rust/pg_int_casts/: Cargo.toml  build.rs
rust/pg_int_casts/c_oracle/: int_casts_emit.c  wrappers.c
rust/pg_int_casts/src/: lib.rs
rust/pg_int_casts/tests/: diff_int_casts.rs
rust/pg_interval/: Cargo.toml  build.rs
rust/pg_interval/c_oracle/: interval.c  interval_emit.c
rust/pg_interval/src/: lib.rs
rust/pg_macaddr/: BUILD.bazel  Cargo.toml  build.rs
rust/pg_macaddr/c_oracle/: macaddr_emit.c  renamed_macaddr.c  wrappers.c
rust/pg_macaddr/src/: lib.rs
rust/pg_macaddr/tests/: diff_macaddr.proptest-regressions
rust/pg_palloc/: Cargo.toml  build.rs
rust/pg_palloc/include/: pg_palloc.h
rust/pg_palloc/src/: lib.rs
rust/pg_palloc/tests/: c_abi_smoke.c  c_abi_smoke.rs
rust/pg_text/: Cargo.toml  build.rs
rust/pg_text/c_oracle/: renamed_text.c  text.c  text_emit.c  wrappers.c
rust/pg_text/src/: lib.rs
rust/pg_text/tests/: diff_text.rs
rust/pg_tid/: BUILD.bazel  Cargo.toml  build.rs
rust/pg_tid/c_oracle/: renamed_tid.c  tid.c  tid_emit.c  wrappers.c
rust/pg_tid/src/: lib.rs
rust/pg_timestamp_arith/: Cargo.toml  build.rs
rust/pg_timestamp_arith/c_oracle/: renamed_timestamp_arith.c  (+2 more)
rust/pg_uuid/: BUILD.bazel  Cargo.toml  build.rs
rust/pgfnames/: Cargo.toml
tools/: BUILD.bazel  parse_check.c  plpgsql_to_json.c  run_parse_check.sh  sql_to_protobuf.c
tools/catalog_gen/: README.md
tools/corpus_extract/: BUILD.bazel
tools/pgpb_to_lean_ast/: pgpb_to_lean_ast.c  smoke_fixture.sql
tools/pgpb_to_snapshot/: BUILD.bazel  pgpb_to_snapshot.c
tools/regen/: BUILD.bazel  check-all-behavioral.sh  check-all-grounding.sh  check-bytea-grounding.sh  check-cash-arith-grounding.sh  check-date-arith-grounding.sh  check-float-arith-grounding.sh  check-float-to-int-grounding.sh  check-float-unary-grounding.sh  check-int-arith-grounding.sh  check-int-bitwise-grounding.sh  check-int-casts-grounding.sh  check-int-cmp-grounding.sh  check-int-div-grounding.sh  check-int-hash-grounding.sh  check-int-unary-grounding.sh  check-interval-grounding.sh  check-macaddr-grounding.sh  check-text-grounding.sh  check-tid-grounding.sh  check-timestamp-arith-grounding.sh  check-uuid-grounding.sh  cluster.bzl  clusters.bzl  gate1.bzl  lean_emits.bzl  regen-bytea.sh  regen-cash-arith.sh  regen-date-arith.sh  regen-float-arith.sh  regen-float-to-int.sh  regen-float-unary.sh  regen-int-arith.sh  regen-int-bitwise.sh  regen-int-casts.sh  regen-int-cmp.sh  regen-int-div.sh  regen-int-hash.sh  regen-int-unary.sh  regen-interval.sh  (+5 more)
tools/stream_a/: PROMPT_TEMPLATE.md
(+194 files in other folders)
