load("@rules_lean//lean:lean.bzl", "lean_test")
load("//tools/regen:cluster.bzl", "PG_IR_OLD_BASE", "PG_IR_PRELUDE", "gate1_cluster")

# Expose all Pg.* Lean source files publicly so cross-repo
# consumers (e.g. Aion's lean_test targets) can list them in
# their own `srcs` for shim-style migrations. rules_lean's
# lean_test rule doesn't expose a LeanInfo provider for
# downstream `deps` consumption, so cross-repo Lean source
# sharing happens at the source-file level via `srcs`.
exports_files(
    glob(["Pg/**/*.lean"]),
    visibility = ["//visibility:public"],
)

# ─── Gate 1 — regen idempotence (Bazel-native) ─────────────────────
#
# One `gate1_cluster(...)` per Pg.Ir cluster. The macro generates a
# `lean_emit` (Lean main → stdout) + a skylib `diff_test` (committed
# source vs lean_emit). Aggregated via `//tools/regen:gate1_all`.
#
# The src lists below mirror the per-cluster `lean -o Pg/Ir/...olean ...`
# sequences in `tools/regen/regen-*.sh`. Order matters — lean_emit
# compiles srcs sequentially.

# ── Clusters with the standard PG_IR_OLD_BASE prelude (Types, Datum,
# Cmp, Emit/Common) plus their <Cluster>Common module. Rust-only emit. ──

gate1_cluster(
    name = "int_arith",
    rust_entry = "Pg/Ir/Emit/IntArith.lean",
    rust_target = "//rust/pg_int4_arith:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntArithCommon.lean",
        "Pg/Ir/Emit/IntArith.lean",
    ],
)

gate1_cluster(
    name = "int_bitwise",
    rust_entry = "Pg/Ir/Emit/IntBitwise.lean",
    rust_target = "//rust/pg_int4_bitwise:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntBitwiseCommon.lean",
        "Pg/Ir/Emit/IntBitwise.lean",
    ],
)

gate1_cluster(
    name = "int_casts",
    rust_entry = "Pg/Ir/Emit/IntCasts.lean",
    rust_target = "//rust/pg_int_casts:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntCastsCommon.lean",
        "Pg/Ir/Emit/IntCasts.lean",
    ],
)

# int_cmp is the one exception: no IntCmpCommon module. The Rust-emit
# IntCmp.lean imports Pg/Ir/Emit/Common directly.
gate1_cluster(
    name = "int_cmp",
    rust_entry = "Pg/Ir/Emit/IntCmp.lean",
    rust_target = "//rust/pg_int4_cmp:lib_rs",
    srcs = PG_IR_OLD_BASE + ["Pg/Ir/Emit/IntCmp.lean"],
)

gate1_cluster(
    name = "int_div",
    rust_entry = "Pg/Ir/Emit/IntDiv.lean",
    rust_target = "//rust/pg_int4_div:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntDivCommon.lean",
        "Pg/Ir/Emit/IntDiv.lean",
    ],
)

gate1_cluster(
    name = "int_hash",
    rust_entry = "Pg/Ir/Emit/IntHash.lean",
    rust_target = "//rust/pg_int4_hash:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntHashCommon.lean",
        "Pg/Ir/Emit/IntHash.lean",
    ],
)

gate1_cluster(
    name = "int_unary",
    rust_entry = "Pg/Ir/Emit/IntUnary.lean",
    rust_target = "//rust/pg_int4_unary:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntUnaryCommon.lean",
        "Pg/Ir/Emit/IntUnary.lean",
    ],
)

gate1_cluster(
    name = "float_arith",
    rust_entry = "Pg/Ir/Emit/FloatArith.lean",
    rust_target = "//rust/pg_float_arith:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/FloatArithCommon.lean",
        "Pg/Ir/Emit/FloatArith.lean",
    ],
)

gate1_cluster(
    name = "float_to_int",
    rust_entry = "Pg/Ir/Emit/FloatToInt.lean",
    rust_target = "//rust/pg_float_to_int:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/FloatToIntCommon.lean",
        "Pg/Ir/Emit/FloatToInt.lean",
    ],
)

gate1_cluster(
    name = "float_unary",
    rust_entry = "Pg/Ir/Emit/FloatUnary.lean",
    rust_target = "//rust/pg_float_unary:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/FloatUnaryCommon.lean",
        "Pg/Ir/Emit/FloatUnary.lean",
    ],
)

gate1_cluster(
    name = "cash_arith",
    rust_entry = "Pg/Ir/Emit/CashArith.lean",
    rust_target = "//rust/pg_cash_arith:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/CashArithCommon.lean",
        "Pg/Ir/Emit/CashArith.lean",
    ],
)

gate1_cluster(
    name = "date_arith",
    rust_entry = "Pg/Ir/Emit/DateArith.lean",
    rust_target = "//rust/pg_date_arith:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/DateArithCommon.lean",
        "Pg/Ir/Emit/DateArith.lean",
    ],
)

gate1_cluster(
    name = "timestamp_arith",
    rust_entry = "Pg/Ir/Emit/TimestampArith.lean",
    rust_target = "//rust/pg_timestamp_arith:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/TimestampArithCommon.lean",
        "Pg/Ir/Emit/TimestampArith.lean",
    ],
)

gate1_cluster(
    name = "interval",
    rust_entry = "Pg/Ir/Emit/Interval.lean",
    rust_target = "//rust/pg_interval:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/IntervalCommon.lean",
        "Pg/Ir/Emit/Interval.lean",
    ],
)

gate1_cluster(
    name = "bytea",
    rust_entry = "Pg/Ir/Emit/Bytea.lean",
    rust_target = "//rust/pg_bytea:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/ByteaCommon.lean",
        "Pg/Ir/Emit/Bytea.lean",
    ],
)

gate1_cluster(
    name = "text",
    rust_entry = "Pg/Ir/Emit/Text.lean",
    rust_target = "//rust/pg_text:lib_rs",
    srcs = PG_IR_OLD_BASE + [
        "Pg/Ir/Emit/TextCommon.lean",
        "Pg/Ir/Emit/Text.lean",
    ],
)

# ── Clusters with a lighter prelude (no Cmp.lean / Emit/Common.lean)
# AND a real-PG-headers C emit alongside the Rust emit. ──

gate1_cluster(
    name = "macaddr",
    rust_entry = "Pg/Ir/Emit/Macaddr.lean",
    rust_target = "//rust/pg_macaddr:lib_rs",
    srcs = PG_IR_PRELUDE + [
        "Pg/Ir/Emit/MacaddrCommon.lean",
        "Pg/Ir/Emit/Macaddr.lean",
    ],
    c_entry = "Pg/Ir/Emit/MacaddrC.lean",
    c_target = "//rust/pg_macaddr:macaddr_emit_c",
    c_extra_srcs = ["Pg/Ir/Emit/MacaddrC.lean"],
)

gate1_cluster(
    name = "tid",
    rust_entry = "Pg/Ir/Emit/Tid.lean",
    rust_target = "//rust/pg_tid:lib_rs",
    srcs = PG_IR_PRELUDE + [
        "Pg/Ir/Emit/TidCommon.lean",
        "Pg/Ir/Emit/Tid.lean",
    ],
    c_entry = "Pg/Ir/Emit/TidC.lean",
    c_target = "//rust/pg_tid:tid_emit_c",
    c_extra_srcs = ["Pg/Ir/Emit/TidC.lean"],
)

gate1_cluster(
    name = "uuid",
    rust_entry = "Pg/Ir/Emit/Uuid.lean",
    rust_target = "//rust/pg_uuid:lib_rs",
    srcs = PG_IR_PRELUDE + [
        "Pg/Ir/Emit/UuidCommon.lean",
        "Pg/Ir/Emit/Uuid.lean",
    ],
    c_entry = "Pg/Ir/Emit/UuidC.lean",
    c_target = "//rust/pg_uuid:uuid_emit_c",
    c_extra_srcs = ["Pg/Ir/Emit/UuidC.lean"],
)

# Receiving scaffolding for the PgAst extraction (Phase 1).
#
# Currently: empty stub Lean modules at `Pg/*` + `Pg/Catalog/*`.
# Phase 1 of the extraction (Aion-side drives, target start
# 2026-06-01) overwrites the stubs with the moved content from
# `lean/Aion/Db/PgTy.lean`, `PgAst.lean`, `PgPretty.lean`,
# `PgRegexAst.lean`, `Catalog.lean` (umbrella), and `Catalog/*`.
#
# Full decision trail (8 docs):
#   ~/Documents/rfcs/narrative/pgast-extraction-proposal.md
#   ~/Documents/rfcs/narrative/pgast-extraction-review.md
#   ~/Documents/rfcs/narrative/pgast-extraction-response.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-plan.md
#   ~/Documents/rfcs/narrative/pgast-extraction-phase1-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed.md
#   ~/Documents/rfcs/narrative/pgast-extraction-scaffold-landed-ack.md
#   ~/Documents/rfcs/narrative/pgast-extraction-pre-phase1-followup.md
#
# Note: Pg/RegexAst.lean + Pg/Catalog.lean added 2026-05-25 by the
# Aion-side agent per the pre-Phase-1 dep audit (commit `c4e49f1`
# Aion-side; see pre-phase1-followup.md). PgRegexAst is a hard dep
# of Pg.Ast via `Expr.regexMatch`, so it must land in Phase 1
# (not Phase 4 as originally scoped). Pg/Catalog.lean is the
# umbrella re-exporter; Aion's current umbrella is missing
# `AttributeRef` + `Generated` imports — Phase 1 PR completes them.
#
# This `:smoke_test` proves the build wiring on empty stubs: it
# imports every scaffolded module and asserts they type-check
# together. Stays in place after Phase 1 as a structural
# regression-gate on the receiving-side imports.
lean_test(
    name = "smoke_test",
    srcs = [
        # Dependency-ordered: lean_test compiles srcs in list order.
        "@rules_lang//lean:Polyglot/Sql/Ast.lean",
        "Pg/Ty.lean",
        "Pg/RegexAst.lean",
        "Pg/Catalog/Oid.lean",
        "Pg/Catalog/Tables.lean",
        "Pg/Catalog/RegTypes.lean",
        "Pg/Catalog/Snapshot.lean",
        "Pg/Catalog/Resolution.lean",
        "Pg/Catalog/AttributeRef.lean",
        "Pg/Catalog/Generated.lean",
        "Pg/Catalog.lean",
        "Pg/Ast.lean",
        "Pg/Stmt.lean",
        "Pg/Pretty.lean",
        "Pg/Smoke.lean",
    ],
    entry = "Pg/Smoke.lean",
    visibility = ["//visibility:public"],
)

# Smoke test that exercises cross-repo wiring with rules_lang's
# `Polyglot.Sql.Ast` (the generic SQL atlas). Pg/Ast.lean's factor
# step (Phase 1b) will `import Polyglot.Sql.Ast` and define
# `Pg.Ast.ExprExt` extending it; this smoke test proves the import
# path resolves before the heavy factor work proceeds.
#
# Sources include the rules_lang-side file via `@rules_lang//lean:...`
# (which works under bzlmod local_path_override + the rules_lean
# cross-repo `_module_path` patch). The package check sees
# `lean/Polyglot/Sql/Ast.lean` after the `../rules_lang+/` prefix
# strip — same package as the rules_postgres-side files, so the
# stage layout works.
lean_test(
    name = "polyglot_sql_smoke_test",
    srcs = [
        "@rules_lang//lean:Polyglot/Sql/Ast.lean",
        "Polyglot/SqlSmoke.lean",
    ],
    entry = "Polyglot/SqlSmoke.lean",
    visibility = ["//visibility:public"],
)
