load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "extensions.bzl",
])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    visibility = ["//docs:__pkg__"],
    deps = ["@rules_shell//shell:rules_bzl"],
)

bzl_library(
    name = "extensions_bzl",
    srcs = ["extensions.bzl"],
    visibility = ["//docs:__pkg__"],
    deps = [
        "//postgres/private:known_versions_bzl",
        "@rules_github//github:repositories_bzl",
    ],
)
