load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

# parse_check — CLI around libpg_query's `pg_query_parse`. Reads a .sql
# file, exits 0 if it parses cleanly, 1 otherwise (with error + cursor
# position on stderr). Used by `pg_parse_valid_test` to gate SQL files
# against postgres's own parser as a CI check.
cc_binary(
    name = "parse_check",
    srcs = ["parse_check.c"],
    deps = ["@libpg_query"],
)

# plpgsql_to_json — CLI around libpg_query's `pg_query_parse_plpgsql`.
# Reads a CREATE FUNCTION .sql file, parses the PL/pgSQL body, writes
# the JSON AST to stdout. Useful for downstream tools that want to
# inspect PL/pgSQL structure without re-implementing the parser.
cc_binary(
    name = "plpgsql_to_json",
    srcs = ["plpgsql_to_json.c"],
    deps = ["@libpg_query"],
)

# sql_to_protobuf — CLI around libpg_query's `pg_query_parse_protobuf`.
# Reads a .sql file, parses it, writes the marshalled `ParseResult`
# protobuf bytes (per @libpg_query//:pg_query.proto) to stdout. This
# is the canonical AST format consumed by the `sql_*_library` family
# of rules in rules_lang/polyglot/sql.bzl.
cc_binary(
    name = "sql_to_protobuf",
    srcs = ["sql_to_protobuf.c"],
    deps = ["@libpg_query"],
)

exports_files(["run_parse_check.sh"])
