[package]
name = "pg_bytea"
version = "0.0.1"
edition = "2021"
publish = false

# First varlena-using Pg.Ir cluster. Validates the architectural
# composition of pg_fcinfo's varlena helpers (varsize/vardata/
# set_varsize) + pg_palloc's chunk-header allocator + the existing
# diff-test harness for palloc-result body shapes.
#
# v0 (smoke): byteacat (palloc result, memcpy two inputs)
# v1 (next): Lean lift of byteacat
# v2 (later): byteaeq, byteaoctetlen (read-only; requires either a
#             toast_raw_datum_size stub or a 4-byte-only simplified
#             body that diverges from real PG)
description = "Postgres bytea V1 fmgr cluster (first varlena-using Pg.Ir cluster)"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }
pg_palloc = { path = "../pg_palloc" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
