[package]
name = "pg_cash_arith"
version = "0.0.1"
edition = "2021"
publish = false

description = "Postgres cash arithmetic V1 fmgr cluster (Lean-emitted)"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
