[package]
name = "pg_date_arith"
version = "0.0.1"
edition = "2021"
publish = false

description = "Postgres date arithmetic V1 fmgr cluster for Pg.Ir"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
