[package]
name = "pg_float_to_int"
version = "0.0.1"
edition = "2021"
publish = false

description = "Postgres float-to-int cast (ftoi2/ftoi4/dtoi2/dtoi4) V1 fmgr cluster — Pg.Ir-emitted"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
