[package]
name = "pg_int4_cmp"
version = "0.0.1"
edition = "2021"
publish = false

# Stream C v0: hand-translation of Postgres' int4 comparison V1 fmgr
# operators (int4eq, int4ne, int4lt, int4le, int4gt, int4ge) as the
# seed canonical set for the strict-pure V1 fmgr cluster. Validates
# the full chain:
#
#   AST tensor → auto_cluster's V1 fmgr template → pg_fcinfo helpers →
#   diff-test against C oracle (real Postgres source, no backend
#   dependencies) → corpus entry.
#
# Why int4 comparisons:
#   - No ereport / palloc / backend infrastructure → standalone-buildable
#   - Two i32 args + bool return → exercises the multi-arg pg_fcinfo path
#   - 6 functions sharing identical body shape → first real cluster lift
#     target after the seed canonical.
#
# When the memory-context adapter lands, btree_gist will use the same
# pattern but with bumpalo-backed palloc replacement.
description = "Postgres int4 comparison operators — strict-pure V1 fmgr cluster, seed canonical"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
