[package]
name = "pg_int_casts"
version = "0.0.1"
edition = "2021"
publish = false

# Pg.Ir integer width-cast V1 fmgr cluster (6 functions):
# {i2toi4, i4toi2, i2toi8, i8toi2, i4toi8, i8toi4}.
#
# Widening casts (i2→i4, i2→i8, i4→i8) are pure; narrowing casts
# (i4→i2, i8→i2, i8→i4) check bounds and ereport on overflow.
#
# Lean-emitted Rust V1 fmgr bodies, verified against real Postgres
# source via c_oracle diff-test and AST structural grounding.
description = "Postgres integer width-cast V1 fmgr cluster"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
