[package]
name = "pg_tid"
version = "0.0.1"
edition = "2021"
publish = false

# Pg.Ir tid (tuple identifier) comparison, clamping and hash cluster. 10 functions total:
#   Comparison: tideq, tidne, tidlt, tidle, tidgt, tidge (6 ops)
#   3-way cmp: bttidcmp (1 op)
#   Clamping: tidlarger, tidsmaller (2 ops)
#   Hash: hashtid, hashtidextended (2 ops)
#
# The comparison operators all delegate to a 3-way comparison of block number
# then offset number (mirroring Postgres' ItemPointerCompare). The clamping
# operators return the larger/smaller pointer. The hash operators use
# Jenkins/lookup3 hashing via pg_fcinfo::hash_bytes_6 helpers.
#
# Source of truth: Pg/Ir/Emit/TidCommon.lean (family table),
# Pg/Ir/Emit/Tid.lean (Rust codegen), Pg/Ir/Emit/TidC.lean (C emit).
description = "Postgres tid (tuple identifier) comparison, clamping and hash V1 fmgr cluster"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }
libc = "0.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
