[package]
name = "pg_timestamp_arith"
version = "0.0.1"
edition = "2021"
publish = false

description = "Postgres timestamp arithmetic V1 fmgr cluster for Pg.Ir"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
pg_fcinfo = { path = "../pg_fcinfo" }
pg_palloc = { path = "../pg_palloc" }

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
