load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# c_oracle: vendored real-Postgres bodies (renamed via preprocessor)
# + setjmp wrapper. The base `uuid.c` source is included by
# `renamed_uuid.c` via #include, so it's a textual header.
cc_library(
    name = "c_oracle",
    srcs = [
        "c_oracle/renamed_uuid.c",
        "c_oracle/wrappers.c",
    ],
    textual_hdrs = ["c_oracle/uuid.c"],
    deps = ["//rust/pg_fcinfo:ereport_hdr"],
)

rust_library(
    name = "pg_uuid",
    srcs = ["src/lib.rs"],
    edition = "2021",
    deps = ["//rust/pg_fcinfo",
        "@crates//:libc",],
)

rust_test(
    name = "diff_uuid",
    srcs = ["tests/diff_uuid.rs"],
    edition = "2021",
    deps = [
        ":c_oracle",
        ":pg_uuid",
        "//rust/pg_fcinfo",
        "@crates//:proptest",
    ],
)

filegroup(
    name = "lib_rs",
    srcs = ["src/lib.rs"],
)

filegroup(
    name = "uuid_emit_c",
    srcs = ["c_oracle/uuid_emit.c"],
)

# ─── Gate 3 — clang AST structural diff vs real PG ────────────────
load("//tools/regen:cluster.bzl", "gate3_cluster")

gate3_cluster(
    name = "uuid",
    pg_source = "@postgres_src//:src/backend/utils/adt/uuid.c",
    lean_emit_c = ":uuid_emit_c",
    fn_names = [
        "uuid_eq",
        "uuid_ne",
        "uuid_lt",
        "uuid_le",
        "uuid_gt",
        "uuid_ge",
        "uuid_cmp",
        "uuid_hash",
        "uuid_hash_extended",
    ],
)
